# Ciclus_esp32c3

./: partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  general_definitions.h  iterations.c  iterations.h  main.c  mqtt.c  mqtt.h  ota.c  ota.h  wifi.c  wifi.h  zmain2.c
